// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom default render renders correctly 1`] = `

<div class="ais-ClearRefinements">
  <div class>
    <a>
      Clear refinements
    </a>
  </div>
</div>

`;

exports[`custom default render renders correctly with an URL for the href 1`] = `

<div class="ais-ClearRefinements">
  <div class>
    <a href="/clear/refinements">
      Clear refinements
    </a>
  </div>
</div>

`;

exports[`custom default render renders correctly without refinement 1`] = `

<div class="ais-ClearRefinements">
  <div class="no-refinement">
    <a>
      Clear refinements
    </a>
  </div>
</div>

`;

exports[`custom resetLabel render renders correctly with a custom reset label 1`] = `

<div class="ais-ClearRefinements">
  <button type="reset"
          class="ais-ClearRefinements-button"
  >
    <span>
      Remove the refinements
    </span>
  </button>
</div>

`;

exports[`default render renders correctly 1`] = `

<div class="ais-ClearRefinements">
  <button type="reset"
          class="ais-ClearRefinements-button"
  >
    Clear refinements
  </button>
</div>

`;

exports[`default render renders correctly without refinements 1`] = `

<div class="ais-ClearRefinements">
  <button type="reset"
          disabled="disabled"
          class="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
  >
    Clear refinements
  </button>
</div>

`;
